# uScene3D

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/robok/engine/: MainActivity.kt  Strings.kt
app/src/main/java/org/robok/engine/compose/: GDXWidget.kt
app/src/main/java/org/robok/engine/compose/boxoptions/: BoxOptions.kt
app/src/main/java/org/robok/engine/compose/components/animation/: ExpandAndShrink.kt
app/src/main/java/org/robok/engine/compose/components/gdx/: GDXWidget.kt
app/src/main/java/org/robok/engine/compose/components/options/: OptionItem.kt  OptionModel.kt  Options.kt  OptionsGrid.kt
app/src/main/java/org/robok/engine/compose/model/: GdxViewModel.kt  Options.kt
app/src/main/java/org/robok/engine/compose/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/robok/engine/compose/viewmodel/: GDXViewModel.kt
app/src/main/java/org/robok/engine/model/: Option.kt
app/src/main/java/org/robok/engine/viewmodel/: GDXViewModel.kt
app/src/main/res/values/: strings.xml
feature/scene/: build.gradle.kts
feature/scene/src/main/cpp/: CMakeLists.txt  converter.cpp
feature/scene/src/main/java/org/robok/engine/feature/scene/editor/controller/: CameraInputController2.java
feature/scene/src/main/java/org/robok/engine/feature/scene/editor/drawing/: DrawingRenderer.kt
feature/scene/src/main/java/org/robok/engine/feature/scene/editor/fragment/: LibGDXFragment.kt
(+6 files in other folders)
